--- a/html/addAddress.html
+++ b/html/addAddress.html
@@ -61,10 +61,10 @@
 
 </head>
 <body style="background-color: #EEEEF3">
-<div class="top-div" style="width: 100%;position:fixed;top: 0px;left: 0px;z-index: 10001">
-    <div class="sl-flex-row-center-flex-start " style="background-color: red;height: 3rem;padding-left: 0.8rem;">
-        <img src="../assets/images/back.png" alt="" style="width: 1.5rem;height: 1.5rem;" onclick="goBack()">
-        <div style="color: white;" class="title">新增收货地址</div>
+<div class="top-div sl-width-percent100 sl-position-fixed sl-top-0rem sl-left-0rem sl-z-Index-10001">
+    <div class="sl-flex-row-center-flex-start sl-background-color-red sl-height-3rem sl-padding-left-08rem" >
+        <img src="../assets/images/back.png" class="sl-width-1dot5rem sl-height-1dot5rem"  onclick="goBack()">
+        <div class="title sl-font-color-white">新增收货地址</div>
     </div>
 </div>
 <div style="margin-top: 3rem;background-color:white;">
@@ -90,7 +90,7 @@
             <textarea name="" id="" cols="10" rows="5" placeholder="请输入详细地址" name="detailAddress" class="sl-width-percent100" style="-webkit-box-shadow: none;-moz-box-shadow: none ;box-shadow: none ;" required></textarea>
         </div>
 
-        <button type="submit" class="sl-bottomNav sl-margin-top-3rem">提交</button>
+        <button type="submit" class="sl-bottomNav sl-margin-top-3rem sl-height-3rem">提交</button>
     </form>
 
 </div>
