--- a/html/girlFruit.html
+++ b/html/girlFruit.html
@@ -54,10 +54,10 @@
 
 </head>
 <body >
-<div class="top-div" style="width: 100%;position:fixed;top: 0px;left: 0px;z-index: 10001">
-    <div class="sl-flex-row-center-flex-start " style="background-color: red;height: 3rem;padding-left: 0.8rem;">
-        <img src="../assets/images/back.png" alt="" style="width: 1.5rem;height: 1.5rem;" onclick="goBack()">
-        <div style="color: white;" class="title">商品详情</div>
+<div class="top-div sl-width-percent100 sl-position-fixed sl-top-0rem sl-left-0rem sl-z-Index-10001">
+    <div class="sl-flex-row-center-flex-start sl-background-color-red sl-height-3rem sl-padding-left-08rem" >
+        <img src="../assets/images/back.png" class="sl-width-1dot5rem sl-height-1dot5rem"  onclick="goBack()">
+        <div class="title sl-font-color-white">商品详情</div>
     </div>
 </div>
 <div style=";margin-top: 3rem;">
@@ -156,12 +156,11 @@
 <div id="grayTier" class="sl-width-percent100 sl-height-percent100"></div>
 <!--兑换成功灰色层-->
 <div id="successTier" class="sl-width-percent100 sl-height-percent100"></div>
-
-<div id="bottomNav" style="width: 100%;" class="sl-flex-row-center-space-between sl-navbar">
-    <div style="width: 70%;background-color: white;height:3rem;color: black;" class="sl-flex-row-center-flex-start">
-        <span style="font-size: 0.8rem;color: black;margin-left: .8rem;">花费的积分&nbsp;&nbsp;:</span><b style="font-size: 0.8rem;color: red;margin-left: .8rem;">0</b>
+<div id="bottomNav" class="sl-flex-row-center-space-between sl-navbar sl-height-3rem sl-width-percent100">
+    <div class="sl-flex-row-center-flex-start sl-height-percent100 sl-font-color-black sl-background-color-white sl-width-percent100 sl-width-percent70">
+        <span class="sl-font-size-08rem sl-font-color-black sl-margin-left-08rem">花费的积分&nbsp;&nbsp;:</span><b class="sl-font-size-08rem sl-font-color-red sl-margin-left-08rem" >0</b>
     </div>
-    <div style="width: 30%;background-color: red;text-align: center;color: white;height: 3rem;" class="sl-flex-column-center-center">
+    <div class="sl-flex-column-center-center sl-height-percent100 sl-font-color-white sl-background-color-red sl-width-percent30">
         <span>立即兑换</span>
     </div>
 </div>
